--- a/Test02/Views/QTV/ThemNV.cshtml
+++ b/Test02/Views/QTV/ThemNV.cshtml
@@ -13,7 +13,7 @@
             @Html.AntiForgeryToken()
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group col-md-4">
-                @Html.LabelFor(model => model.MaChucVu, htmlAttributes: new { @class = "control-label col-md-2" })
+                <strong>Chức vụ: </strong>
                 <div class="col-md-10">
                     <select class="form-control" id="MaChucVu" name="MaChucVu">
                         <option selected>NVKD</option>
@@ -25,40 +25,40 @@
                 </div>
             </div>
             <div class="form-group col-md-4">
-                @Html.LabelFor(model => model.TenNV, htmlAttributes: new { @class = "control-label" })
+                <strong>Tên nhân viên: </strong>
                 @Html.EditorFor(model => model.TenNV, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TenNV, "", new { @class = "text-danger" })
             </div>
             <div class="form-group col-md-4">
-                @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label" })
+                <strong>Tên đăng nhập: </strong>
                 @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
             </div>
             <div class="form-group col-md-4">
-                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label" })
+                <strong>Mật khẩu: </strong>
                 @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
 
             <div class="form-group col-md-4">
-                @Html.LabelFor(model => model.SDT, htmlAttributes: new { @class = "control-label" })
+                <strong>SDT: </strong>
                 @Html.EditorFor(model => model.SDT, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.SDT, "", new { @class = "text-danger" })
             </div>
             <div class="form-group  col-md-4">
-                @Html.LabelFor(model => model.DiaChi, htmlAttributes: new { @class = "control-label" })
+                <strong>Địa chỉ: </strong>
                 @Html.EditorFor(model => model.DiaChi, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
             </div>
             <div class="form-group col-md-4">
-                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label" })
+                <strong>Email: </strong>
                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
             <div class="form-group col-md-10">
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-default" />
+                        <input type="submit" value="Thêm nhân viên" class="btn btn-default" />
                     </div>
                 </div>
             </div>
