--- a/Test02/Views/KeToan/Doanhthu.cshtml
+++ b/Test02/Views/KeToan/Doanhthu.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewBag.Title = "Doanhthu";
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
+    ViewBag.dthu = "active";
+    ViewBag.nd = "Báo cáo doanh thu";
 }
 
 <h2>Doanhthu</h2>
