--- a/Test02/Views/KeToan/QLHoaDon.cshtml
+++ b/Test02/Views/KeToan/QLHoaDon.cshtml
@@ -8,7 +8,32 @@
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
     List<ChiTietDonHang> ctdh = db.ChiTietDonHangs.ToList();
 }
+@{
+    if (TempData["ktra"] != null)
+    {
+        <script>
+            swal({
+                title: "Tạo hóa đơn thành công !!!!",
+                icon: "success",
+                button: "Thoát",
+            });
 
+        </script>
+
+    }
+    if (TempData["xoahd"] != null)
+    {
+        <script>
+            swal({
+                title: "Xóa hóa đơn thành công !!!!",
+                icon: "success",
+                button: "Thoát",
+            });
+
+        </script>
+
+    }
+}
 <div class="row">
     <div class="col-md-12">
         <div class="tile">
@@ -36,7 +61,7 @@
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã hóa đơn: activate to sort column ascending" style="width: 60px;">Mã hóa đơn</th>
                                         <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã đơn hàng: activate to sort column ascending" style="width: 60px;">Mã đơn hàng</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tên đại lý: activate to sort column ascending" style="width: 140px;">Tên đại lý</th>
-                                                                                <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã đại lý: activate to sort column ascending" style="width: 60px;">Mã đại lý</th>
+                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã đại lý: activate to sort column ascending" style="width: 60px;">Mã đại lý</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tổng tiền: activate to sort column ascending" style="width: 100px;">Tổng hóa đơn</th>
                                         <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã đơn hàng: activate to sort column ascending" style="width: 60px;">Mã nhân viên</th>
                                         <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Trạng thái: activate to sort column ascending" style="width: 150px;">Trạng thái</th>
@@ -46,61 +71,61 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    @{ 
-                                      
+                                    @{
+
                                     }
                                     @foreach (var item in Model)
                                     {
-                                    <tr>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.MaHD)
-                                        </td>
+                                        <tr>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.MaHD)
+                                            </td>
 
-                                        <td>
-                                            
-                                            @Html.DisplayFor(modelItem => item.MaDH)
-                                        </td>
-                                        <td>
-                                            @{var madh = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
-                                                var tendl = db.DaiLies.Where(s => s.MaDL == madh.MaDL).FirstOrDefault();
-                                            }
-                                            @Html.DisplayFor(modelItem => tendl.TenDL)
-                                        </td>
-                                        <td>
-                                            @{var madl = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
+                                            <td>
 
-                                            }
-                                            @Html.DisplayFor(modelItem => madl.MaDL)
-                                        </td>
-                                        <td>
-                                            @{ var ThanhTien = string.Format("{0:0,0 vnđ}", item.TongTien);}
-                                            @Html.DisplayFor(modelItem => ThanhTien)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.TenDVTiepNhan)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => madh.TinhTrangThanhToan)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => madh.NgayLap)
-                                        </td>
+                                                @Html.DisplayFor(modelItem => item.MaDH)
+                                            </td>
+                                            <td>
+                                                @{var madh = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
+                                                    var tendl = db.DaiLies.Where(s => s.MaDL == madh.MaDL).FirstOrDefault();
+                                                }
+                                                @Html.DisplayFor(modelItem => tendl.TenDL)
+                                            </td>
+                                            <td>
+                                                @{var madl = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
+
+                                                }
+                                                @Html.DisplayFor(modelItem => madl.MaDL)
+                                            </td>
+                                            <td>
+                                                @{ var ThanhTien = string.Format("{0:0,0 vnđ}", item.TongTien);}
+                                                @Html.DisplayFor(modelItem => ThanhTien)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.TenDVTiepNhan)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => madh.TinhTrangThanhToan)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => madh.NgayLap)
+                                            </td>
 
 
-                                        <td>
+                                            <td>
 
-                                            <a href="/KeToan/ChinhsuaHD/@item.MaDH" class="btn btn-primary btn-sm edit">
-                                                <i class="fa fa-edit"></i>
-                                            </a>
-                                            <a href="/KeToan/XoaHD/@item.MaHD" class="btn btn-primary btn-sm trash">
-                                                <i class="fas fa-trash-alt"></i>
-                                            </a>
-                                            <a href="/KeToan/XuatHDBH/@item.MaDH" class="btn btn-primary btn-sm edit">
-                                                <i class="fas fa-train"></i>
-                                            </a>
-                                        </td>
+                                                <a href="/KeToan/ChinhsuaHD/@item.MaDH" class="btn btn-primary btn-sm edit">
+                                                    <i class="fa fa-edit"></i>
+                                                </a>
+                                                <a href="/KeToan/XoaHD/@item.MaHD" class="btn btn-primary btn-sm trash">
+                                                    <i class="fas fa-trash-alt"></i>
+                                                </a>
+                                                <a href="/KeToan/XuatHDBH/@item.MaDH" class="btn btn-primary btn-sm edit">
+                                                    <i class="fas fa-train"></i>
+                                                </a>
+                                            </td>
 
-                                    </tr>
+                                        </tr>
                                     }
                                 </tbody>
                             </table>
