--- a/Test02/Views/KeToan/QLCongno.cshtml
+++ b/Test02/Views/KeToan/QLCongno.cshtml
@@ -9,18 +9,57 @@
     List<HoaDon> ctdh = db.HoaDons.ToList();
 }
 
+@{
+    if (TempData["taocn"] != null)
+    {
+        <script>
+            swal({
+                title: "Tạo phiếu công nợ thành công !!!!",
+                icon: "success",
+                button: "Thoát",
+            });
+
+        </script>
+
+    }
+    if (TempData["xoacn"] != null)
+    {
+        <script>
+            swal({
+                title: "Xóa phiếu công nợ thành công !!!!",
+                icon: "success",
+                button: "Thoát",
+            });
+
+        </script>
+
+    }
+    if (TempData["chinhsuacn"] != null)
+    {
+        <script>
+            swal({
+                title: "Chỉnh sửa phiếu công nợ thành công !!!!",
+                icon: "success",
+                button: "Thoát",
+            });
+
+        </script>
+
+    }
+}
+
 <div class="row">
     <div class="col-md-12">
         <div class="tile">
             <div class="tile-body">
-               
+
                 <div class="row element-button">
-                    <div class="col-sm-2">
+                    @*<div class="col-sm-2">
                         <a class="btn btn-delete btn-sm nhap-tu-file" href="~/KeToan/ThemCongno "><i class="fas fa-file-upload"></i> Thêm phiếu công nợ</a>
-                    </div>
+                    </div>*@
                     <div class="col-sm-2">
-                            <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="#"><i class="fas fa-copy"></i> Làm mới danh sách</a>
-                        </div>
+                        <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="#"><i class="fas fa-copy"></i> Làm mới danh sách</a>
+                    </div>
                     <div class="col-sm-2">
                         <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="myApp.printTable()">
                             <i class="fas fa-print"></i> In dữ liệu
@@ -28,7 +67,7 @@
                     </div>
 
                 </div>
-                
+
                 <div class="row">
                     <div class="col-sm-12">
                         <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
@@ -46,56 +85,56 @@
                                     <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 200px;">Chức năng</th>
                                 </tr>
                             </thead>
-                           
+
                             <tbody>
                                 @foreach (var item in Model)
                                 {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.MaCongNo)
-                                    </td>
-                                    <td>
-                                        @{var tendl = db.DaiLies.Find(item.MaDL);
-                                        }
-                                        @Html.DisplayFor(modelItem => tendl.TenDL)
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.MaCongNo)
+                                        </td>
+                                        <td>
+                                            @{var tendl = db.DaiLies.Find(item.MaDL);
+                                            }
+                                            @Html.DisplayFor(modelItem => tendl.TenDL)
 
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.MaDL)
-                                    </td>
-                                    <td>
-                                        @{var loaidly = db.DaiLies.Find(item.MaDL);
-                                        }
-                                        @Html.DisplayFor(modelItem => loaidly.MaLoaiDL)
-                                    </td>
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.MaDL)
+                                        </td>
+                                        <td>
+                                            @{var loaidly = db.DaiLies.Find(item.MaDL);
+                                            }
+                                            @Html.DisplayFor(modelItem => loaidly.MaLoaiDL)
+                                        </td>
 
-                                    <td>
-                                        @{ var Tienno = string.Format("{0:0,0 vnđ}", item.TienNo);}
-                                        @Html.DisplayFor(modelItem => Tienno)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.NgayLapCN)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.HanTra)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.TrangThai)
-                                    </td>
-                                    <td>
-                                        <a href="/KeToan/ChinhsuCN/@item.MaCongNo" class="btn btn-primary btn-sm edit">
-                                            <i class="fa fa-edit"></i>
-                                        </a>
-                                        <a href="/KeToan/XoaCN/@item.MaCongNo" class="btn btn-primary btn-sm trash">
-                                            <i class="fas fa-trash-alt"></i>
-                                        </a>
-                                        
-                                        <a href="/KeToan/ChitietCN/@item.MaCongNo" class="btn btn-primary btn-sm add ">
-                                            <i class="fas fa-train"></i>
-                                        </a>
+                                        <td>
+                                            @{ var Tienno = string.Format("{0:0,0 vnđ}", item.TienNo);}
+                                            @Html.DisplayFor(modelItem => Tienno)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.NgayLapCN)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.HanTra)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.TrangThai)
+                                        </td>
+                                        <td>
+                                            <a href="/KeToan/ChinhsuCN/@item.MaCongNo" class="btn btn-primary btn-sm edit">
+                                                <i class="fa fa-edit"></i>
+                                            </a>
+                                            <a href="/KeToan/XoaCN/@item.MaCongNo" class="btn btn-primary btn-sm trash">
+                                                <i class="fas fa-trash-alt"></i>
+                                            </a>
 
-                                    </td>
-                                </tr>
+                                            <a href="/KeToan/ChitietCN/@item.MaCongNo" class="btn btn-primary btn-sm add ">
+                                                <i class="fas fa-train"></i>
+                                            </a>
+
+                                        </td>
+                                    </tr>
                                 }
                             </tbody>
                         </table>
