Update_so luong SP

--- a/Test02/Views/KhachHang/PageSanPham.cshtml
+++ b/Test02/Views/KhachHang/PageSanPham.cshtml
@@ -36,9 +36,9 @@
                             {
                                 <img src="~/Content/Img/SanPham/cocalight.jpg" style="height: 100px ; width: 100px;" alt="">
                             }
-                            else if (item.MaSP == "SP01")
+                            else
                             {
-                                <img src="~/Content/Img/SanPham/7up.jpg" style="height: 100px ; width: 100px;" alt="">
+                                <img src="~/Content/Img/SanPham/traolong.png" style="height: 100px ; width: 100px;" alt="">
                             }
                             <div class="info">
                                 <h4>@Html.DisplayFor(modelItem => item.TenSP)</h4>
