--- a/Test02/Views/KinhDoanh/ThemCTHD.cshtml
+++ b/Test02/Views/KinhDoanh/ThemCTHD.cshtml
@@ -21,13 +21,13 @@
                     @Html.HiddenFor(model => model.MaCTDH)
                     @Html.HiddenFor(model => model.MaDH)
                     <div class="form-group">
-                        @Html.LabelFor(model => model.MaSP, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <label class="control-label col-md-2" for="MaSP">Tên sản phẩm</label>
                         @Html.DropDownList("MaSP", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.SoLuong, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <label class="control-label col-md-2" for="SoLuong">Nhập số lượng</label>
                         @Html.EditorFor(model => model.SoLuong, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.SoLuong, "", new { @class = "text-danger" })
                     </div>
